fail_crate/tests/empty_field_new.rs
use inew::New;

#[derive(New)]
struct A {
    #[new()]
    x: u32,
}

fn main() {}
